--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,10 @@ export(createProject)
 export(getlabel)
 export(import.info)
 export(inspect.data)
+export(labAE)
 export(myformat.data)
+export(sstable.ae)
 export(sstable.baseline)
+import("dplyr,")
 import(dplyr)
+import(tidyr)
