--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,5 +10,8 @@ export(labAE)
 export(myformat.data)
 export(sstable.ae)
 export(sstable.baseline)
+export(sstable.survcomp)
+export(sstable.survcomp.subgroup)
 import(dplyr)
+import(survival)
 import(tidyr)
