Add manual and stuff for simple_recode

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(import.info)
 export(inspect.data)
 export(labAE)
 export(myformat.data)
+export(simple_recode)
 export(sstable.ae)
 export(sstable.baseline)
 export(sstable.survcomp)
