Fix simple_recode problem

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(sstable.ae)
 export(sstable.baseline)
 export(sstable.survcomp)
 export(sstable.survcomp.subgroup)
+export(var_recode)
 import(dplyr)
 import(survival)
 import(tidyr)
