Add new function: simple_relevel. Tweaks for ss_huxtable

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 S3method(print,ss_tbl)
 S3method(simple_recode,data.frame)
 S3method(simple_recode,default)
+S3method(simple_relevel,data.frame)
+S3method(simple_relevel,default)
 export(contSummary)
 export(convert.info)
 export(createProject)
@@ -13,6 +15,7 @@ export(inspect.data)
 export(labAE)
 export(myformat.data)
 export(simple_recode)
+export(simple_relevel)
 export(ss_body)
 export(ss_flextable)
 export(ss_format)
