New theme kable

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(contSummary)
 export(convert.info)
 export(createProject)
 export(getlabel)
+export(ht_theme_kable)
 export(ht_theme_markdown)
 export(import.info)
 export(inspect.data)
