--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,23 @@ Type: Package
 Title: Collection of useful R codes for data analysis from the Biostatistics group at OUCRU
 Version: 0.1.3
 Author: Lam Phung Khanh
-Maintainer: Lam Phung Khanh <phungkhanhlam@gmail.com>
+Maintainer: R: 
+    c(
+        person(
+            given = "Khanh Lam",
+            family = "Phung",
+            role = c("author", "maintainer"),
+            email = "phungkhanhlam@gmail.com"),
+        person(
+            given = "Trinh",
+            family = "Dong"
+            role = "maintainer",
+            email = "trindhk@oucru.org"),
+        person(
+            given = 'Biostatistic Group',
+            role = "maintainer"
+        )
+     )
 Description: Collection of useful R codes for data analysis from the Biostatistics group at OUCRU
     Use four spaces when indenting paragraphs within the Description.
 License: The MIT License (MIT)
@@ -17,7 +33,7 @@ Imports: lubridate,
     officer,
     survival,
     tidyr
-RoxygenNote: 6.1.1
+RoxygenNote: 7.0.0
 Suggests: knitr,
     rmarkdown,
     huxtable
