logist_summary: add sstable output. add support for summary_tbl in ss_flextable and ss_huxtable.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,10 @@ S3method(simple_recode,data.frame)
 S3method(simple_recode,default)
 S3method(simple_relevel,data.frame)
 S3method(simple_relevel,default)
+S3method(ss_flextable,default)
+S3method(ss_flextable,list)
+S3method(ss_huxtable,default)
+S3method(ss_huxtable,list)
 export("ref_lv<-")
 export(contSummary)
 export(convert.info)
