Add overlap_join. Up to version 0.1.5

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: C306
 Type: Package
 Title: Collection of useful R codes for data analysis from the Biostatistics group at OUCRU
-Version: 0.1.4
+Version: 0.1.5-201912
 Author: Lam Phung Khanh
 Maintainer@R: 
     c(
@@ -32,8 +32,9 @@ Imports: lubridate,
     flextable,
     officer,
     survival,
-    tidyr
-RoxygenNote: 7.0.0
+    tidyr,
+    data.table
+RoxygenNote: 7.0.2
 Suggests: knitr,
     rmarkdown,
     huxtable
