--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(inspect.data)
 export(labAE)
 export(logist_summary)
 export(myformat.data)
+export(overlap_join)
 export(pct)
 export(ref_lv)
 export(simple_recode)
