--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method("ref_lv<-",factor)
 S3method(as_sstable,default)
 S3method(as_sstable,list)
 S3method(as_sstable,logist_summary)
+S3method(as_sstable,overlap_summary)
 S3method(explicit,lm)
 S3method(print,ss_tbl)
 S3method(ref_lv,factor)
@@ -30,6 +31,7 @@ export(labAE)
 export(logist_summary)
 export(myformat.data)
 export(overlap_join)
+export(overlap_summary)
 export(pct)
 export(ref_lv)
 export(simple_recode)
