--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,10 @@ S3method(as_sstable,list)
 S3method(as_sstable,logist_summary)
 S3method(as_sstable,overlap_summary)
 S3method(explicit,lm)
+S3method(mutate_f,data.frame)
+S3method(mutate_f,data.table)
+S3method(mutate_f,grouped_df)
+S3method(mutate_f,tbl)
 S3method(print,ss_tbl)
 S3method(ref_lv,factor)
 S3method(simple_recode,data.frame)
@@ -16,6 +20,10 @@ S3method(ss_flextable,default)
 S3method(ss_flextable,list)
 S3method(ss_huxtable,default)
 S3method(ss_huxtable,list)
+S3method(summarise_f,data.frame)
+S3method(summarise_f,data.table)
+S3method(summarise_f,grouped_df)
+S3method(summarise_f,tbl)
 export("ref_lv<-")
 export(as_sstable)
 export(contSummary)
@@ -29,13 +37,13 @@ export(import.info)
 export(inspect.data)
 export(labAE)
 export(logist_summary)
+export(mutate_f)
 export(myformat.data)
-export(overlap_join)
-export(overlap_summary)
 export(pct)
 export(ref_lv)
 export(simple_recode)
 export(simple_relevel)
+export(simple_sort)
 export(ss_body)
 export(ss_flextable)
 export(ss_format)
@@ -47,6 +55,8 @@ export(sstable.ae)
 export(sstable.baseline)
 export(sstable.survcomp)
 export(sstable.survcomp.subgroup)
+export(summarise_f)
 import(dplyr)
 import(survival)
 import(tidyr)
+importFrom(data.table,":=")
