Add subgroup_effect to summarise covariable effect within each state of another interacted variable.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,13 @@ S3method(as_sstable,default)
 S3method(as_sstable,list)
 S3method(as_sstable,logist_summary)
 S3method(as_sstable,overlap_summary)
+S3method(as_sstable,subgroup_logist_summary)
 S3method(explicit,lm)
 S3method(mutate_f,data.frame)
 S3method(mutate_f,data.table)
 S3method(mutate_f,grouped_df)
 S3method(mutate_f,tbl)
+S3method(print,logist_summary)
 S3method(print,ss_tbl)
 S3method(ref_lv,factor)
 S3method(simple_recode,data.frame)
@@ -55,6 +57,7 @@ export(sstable.ae)
 export(sstable.baseline)
 export(sstable.survcomp)
 export(sstable.survcomp.subgroup)
+export(subgroup_effect)
 export(summarise_f)
 import(dplyr)
 import(survival)
