--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ S3method(mutate_f,grouped_df)
 S3method(mutate_f,tbl)
 S3method(print,logist_summary)
 S3method(print,ss_tbl)
+S3method(print,subgroup_logist_summary)
 S3method(ref_lv,factor)
 S3method(simple_recode,data.frame)
 S3method(simple_recode,default)
