Up to 202001 build

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: C306
 Type: Package
 Title: Collection of useful R codes for data analysis from the Biostatistics group at OUCRU
-Version: 0.1.5-201912
+Version: 0.1.5-202011
 Author: Lam Phung Khanh
 Maintainer@R: 
     c(
@@ -41,5 +41,6 @@ Imports:
 RoxygenNote: 7.0.2
 Suggests: knitr,
     rmarkdown,
-    huxtable
+    huxtable,
+    ggplot
 VignetteBuilder: knitr
