--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(simple_relevel,default)
 export(contSummary)
 export(convert.info)
 export(createProject)
+export(createProject2)
 export(getlabel)
 export(ht_theme_kable)
 export(ht_theme_markdown)
